--- a/Index.html/index.html
+++ b/Index.html/index.html
@@ -4,29 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stronger by the Plate</title>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Playfair+Display&display=swap" rel="stylesheet">
-
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>Stronger by the Plate</h1>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Nutrition</a>
-      <a href="#">Workouts</a>
-      <a href="#">IV Therapy</a>
-      <a href="#">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="nutritional-foods.html">Nutritional Foods</a>
+      <a href="workouts.html">Workouts</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
     <section>
-      <h2>Welcome</h2>
-      <p>Explore alkaline living, longevity nutrition, and healthy routines for all ages.</p>
+      <h2>Our Mission</h2>
+      <p>To inspire and guide individuals toward better health through alkaline-rich foods, movement, and community — much like the Blue Zones.</p>
+      <img src="images/health-food-plate.jpg" alt="Healthy Food on a Plate" width="400">
+      <img src="images/group-eating.jpg" alt="Group Enjoying Meal" width="400">
     </section>
   </main>
 
@@ -35,3 +31,4 @@
   </footer>
 </body>
 </html>
+
