--- a/README.md/contact.html
+++ b/README.md/contact.html
@@ -19,8 +19,8 @@
   <main>
     <section>
       <h2>Get in Touch</h2>
-      <p>Email: yourname@example.com</p>
-      <p>Follow us on social media!</p>
+      <p>Email: jmedeles@student.alamo.edu</p>
+      <p>@StrongerbythePlate</p>
     </section>
   </main>
 
