--- a/a/nutritional-foods.html
+++ b/a/nutritional-foods.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact Us</title>
+  <title>Nutritional Foods</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Contact</h1>
+    <h1>Nutritional Foods</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="nutritional-foods.html">Nutritional Foods</a>
@@ -18,9 +18,8 @@
 
   <main>
     <section>
-      <h2>Get in Touch</h2>
-      <p>Email: jmedeles@student.alamo.edu</p>
-      <p>@StrongerbythePlate</p>
+      <h2>Top Alkaline Foods & Their Benefits</h2>
+      <p>Explore the best foods for longevity, energy, and internal balance. Includes mineral-rich fruits, veggies, and recipes.</p>
     </section>
   </main>
 
@@ -29,3 +28,5 @@
   </footer>
 </body>
 </html>
+<link rel="stylesheet" href="style.css">
+
