corrected index and folders

--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
+<link rel="stylesheet" href="style.css">
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Workouts</title>
+  <title>Contact Us</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Workout Routines</h1>
+    <h1>Contact</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="nutritional-foods.html">Nutritional Foods</a>
@@ -18,8 +19,9 @@
 
   <main>
     <section>
-      <h2>Home-Friendly and Gym-Based Exercises</h2>
-      <p>Custom workouts for different age groups and goals. Includes video links and beginner plans.</p>
+      <h2>Get in Touch</h2>
+      <p>Email: jmedeles@student.alamo.edu</p>
+      <p>@StrongerbythePlate</p>
     </section>
   </main>
 
@@ -28,5 +30,4 @@
   </footer>
 </body>
 </html>
-<link rel="stylesheet" href="style.css">
 
