--- a/workouts.html
+++ b/workouts.html
@@ -1,13 +1,14 @@
+<link rel="stylesheet" href="styles.css">
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Nutritional Foods</title>
+  <title>Workouts</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Nutritional Foods</h1>
+    <h1>Workout Routines</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="nutritional-foods.html">Nutritional Foods</a>
@@ -18,8 +19,8 @@
 
   <main>
     <section>
-      <h2>Top Alkaline Foods & Their Benefits</h2>
-      <p>Explore the best foods for longevity, energy, and internal balance. Includes mineral-rich fruits, veggies, and recipes.</p>
+      <h2>Home-Friendly and Gym-Based Exercises</h2>
+      <p>Custom workouts for different age groups and goals. Includes video links and beginner plans.</p>
     </section>
   </main>
 
@@ -28,5 +29,4 @@
   </footer>
 </body>
 </html>
-<link rel="stylesheet" href="style.css">
 
