--- a/nutritional-food.html
+++ b/nutritional-food.html
@@ -1,10 +1,10 @@
-<link rel="stylesheet" href="styles.css">
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Nutritional Foods</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- Make sure this matches your actual filename -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
