--- a/index.html
+++ b/index.html
@@ -1,35 +1,47 @@
-<link rel="stylesheet" href="style.css">
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stronger by the Plate</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Header + Navigation -->
   <header>
     <h1>Stronger by the Plate</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="nutritional-foods.html">Nutritional Foods</a>
+      <a href="nutritional-food.html">Nutritional Foods</a>
       <a href="workouts.html">Workouts</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
-  <main>
-    <section>
-      <h2>Our Mission</h2>
-      <p>To inspire and guide individuals toward better health through alkaline-rich foods, movement, and community — much like the Blue Zones.</p>
-      <img src="images/health-food-plate.jpg" alt="Healthy Food on a Plate" width="400">
-      <img src="images/group-eating.jpg" alt="Group Enjoying Meal" width="400">
-    </section>
-  </main>
+  <!-- Hero Section with Big Image -->
+<section class="hero">
+  <img src="images/food-community.jpg" alt="Community enjoying a meal together">
+  <div class="hero-text">
+    <h2>Welcome to Stronger by the Plate</h2>
+    <p>Discover how food, movement, and community can help you live a longer, healthier life — inspired by the world's Blue Zones.</p>
+  </div>
+</section>
 
+<!-- Mission Section -->
+<main>
+  <section class="mission">
+    <h2>Our Mission</h2>
+    <p>We believe in the power of plant-forward foods, mindful movement, and community connections to fuel longevity and wellness for all ages.</p>
+    <img src="images/food-community-planview.jpg" alt="Overhead view of colorful healthy food on a table">
+  </section>
+</main>
+
+
+  <!-- Footer -->
   <footer>
     <p>© 2025 Stronger by the Plate</p>
   </footer>
 </body>
 </html>
-
