corrected Images to images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- Hero Section with Big Image -->
 <section class="hero">
-  <img src="images/food-community.jpg" alt="Community enjoying a meal together">
+  <img src="images/foodcommunity.jpg" alt="Community enjoying a meal together">
   <div class="hero-text">
     <h2>Welcome to Stronger by the Plate</h2>
     <p>Discover how food, movement, and community can help you live a longer, healthier life — inspired by the world's Blue Zones.</p>
@@ -32,7 +32,7 @@
   <section class="mission">
     <h2>Our Mission</h2>
     <p>We believe in the power of plant-forward foods, mindful movement, and community connections to fuel longevity and wellness for all ages.</p>
-    <img src="images/food-communityplanview.jpg" alt="Overhead view of colorful healthy food on a table">
+    <img src="images/foodcommunityplanview.jpg" alt="Overhead view of colorful healthy food on a table">
   </section>
 </main>
 
