--- a/workouts.html
+++ b/workouts.html
@@ -7,15 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Workout Routines</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="nutritional-foods.html">Nutritional Foods</a>
-      <a href="workouts.html">Workouts</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+ <header>
+  <div class="header-container">
+    <h1>Stronger by the Plate</h1>
+    <img src="images/logo.png" alt="Stronger by the Plate Logo" class="site-logo">
+  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="nutritional-foods.html">Nutritional Foods</a>
+    <a href="workouts.html">Workouts</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
 
   <main>
     <section>
@@ -23,6 +26,14 @@
       <p>Custom workouts for different age groups and goals. Includes video links and beginner plans.</p>
     </section>
   </main>
+
+  <section class="workout-video">
+  <a href="https://www.youtube.com/watch?v=w3kRPFG96q8" target="_blank">
+    <img src="images/longevity.jpg" alt="Click to watch workout video" class="video-thumbnail">
+  </a>
+  <p>Click the image to start educating yourself!</p>
+</section>
+
 
   <footer>
     <p>© 2025 Stronger by the Plate</p>
