--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
   <!-- Header + Navigation -->
-  <header>
+ <header>
+  <div class="header-container">
     <h1>Stronger by the Plate</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="nutritional-food.html">Nutritional Foods</a>
-      <a href="workouts.html">Workouts</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+    <img src="images/logo.png" alt="Stronger by the Plate Logo" class="site-logo">
+  </div>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="nutritional-foods.html">Nutritional Foods</a>
+    <a href="workouts.html">Workouts</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+</header>
+
 
   <!-- Hero Section with Big Image -->
 <section class="hero">
