images and links updated

--- a/workouts.html
+++ b/workouts.html
@@ -27,12 +27,20 @@
     </section>
   </main>
 
-  <section class="workout-video">
+ <section class="educational-video">
   <a href="https://www.youtube.com/watch?v=w3kRPFG96q8" target="_blank">
     <img src="images/longevity.jpg" alt="Click to watch workout video" class="video-thumbnail">
   </a>
-  <p>Click the image to start educating yourself!</p>
+  <p>Click the image to start your workout!</p>
 </section>
+
+ <section class="workout-video">
+  <a href="https://www.youtube.com/watch?v=w3kRPFG96q8" target="_blank">
+    <img src="images/workout.jpg" alt="Click to watch workout video" class="video-thumbnail">
+  </a>
+  <p>Click the image to start your workout!</p>
+</section>
+
 
 
   <footer>
