correcting the link and image

--- a/workouts.html
+++ b/workouts.html
@@ -28,15 +28,15 @@
   </main>
 
  <section class="educational-video">
-  <a href="https://www.youtube.com/watch?v=w3kRPFG96q8" target="_blank">
-    <img src="images/longevity.jpg" alt="Click to watch workout video" class="video-thumbnail">
+  <a href="https://www.youtube.com/results?search_query=workouts+for+longevity" target="_blank">
+    <img src="images/workout.jpg" alt="Click to watch educational workout video" class="video-thumbnail">
   </a>
   <p>Click the image to start your workout!</p>
 </section>
 
  <section class="workout-video">
   <a href="https://www.youtube.com/watch?v=w3kRPFG96q8" target="_blank">
-    <img src="images/workout.jpg" alt="Click to watch workout video" class="video-thumbnail">
+    <img src="images/longevity.jpg" alt="Click to watch educational video" class="video-thumbnail">
   </a>
   <p>Click the image to start your workout!</p>
 </section>
