correcting the logo size and link for workouts

--- a/workouts.html
+++ b/workouts.html
@@ -28,7 +28,7 @@
   </main>
 
  <section class="educational-video">
-  <a href="https://www.youtube.com/results?search_query=workouts+for+longevity" target="_blank">
+  <a href="https://www.youtube.com/watch?v=jDuHErny4nw" target="_blank">
     <img src="images/workout.jpg" alt="Click to watch educational workout video" class="video-thumbnail">
   </a>
   <p>Click the image to start your workout!</p>
