--- a/workouts.html
+++ b/workouts.html
@@ -1,10 +1,12 @@
-<link rel="stylesheet" href="styles.css">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Workouts</title>
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="styles.css">
+
+
 </head>
 <body>
  <header>
@@ -27,12 +29,28 @@
     </section>
   </main>
 
- <section class="educational-video">
-  <a href="https://www.youtube.com/watch?v=jDuHErny4nw" target="_blank">
-    <img src="images/workout.jpg" alt="Click to watch educational workout video" class="video-thumbnail">
-  </a>
-  <p>Click the image to start your workout!</p>
+<section class="workout-videos">
+  <h2>Watch & Move: Guided Workouts 🎥</h2>
+
+  <div class="video-wrapper">
+    <h3>10-Minute Beginner Full Body Workout</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/rYehSR0_M0E" 
+      title="10-Minute Beginner Full Body Workout" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-wrapper">
+    <h3>Quick Cardio for Energy</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/965Fwq2aVIo" 
+      title="Quick Cardio Workout" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <div class="video-wrapper">
+    <h3>Stretch and Cool Down Routine</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/USzSlDUyMK0" 
+      title="Stretch and Cool Down" frameborder="0" allowfullscreen></iframe>
+  </div>
 </section>
+
 
   <footer>
     <p>© 2025 Stronger by the Plate</p>
