--- a/nutritional-foods.html
+++ b/nutritional-foods.html
@@ -25,6 +25,31 @@
       <h2>Top Alkaline Foods & Their Benefits</h2>
       <p>Explore the best foods for longevity, energy, and internal balance. Includes mineral-rich fruits, veggies, and recipes.</p>
     </section>
+
+    <section class="nutrition-videos">
+  <h2>Nutrition Education Videos 🍏</h2>
+
+  <h3>The Blue Zones 🌍</h3>
+  <div class="video-wrapper">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/h9cC-8v8NIE"
+      title="The Blue Zones - National Geographic" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div class="video-wrapper">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/wsOL5nKO6c0"
+      title="Secrets of the Blue Zones" frameborder="0" allowfullscreen></iframe>
+  </div>
+
+  <h3>Alkaline Foods 🥦</h3>
+  <div class="video-wrapper">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ta6HJiDGotE"
+      title="Top 10 Alkaline Foods" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <div class="video-wrapper">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/66VdylXI0nQ"
+      title="Benefits of Alkaline Foods" frameborder="0" allowfullscreen></iframe>
+  </div>
+</section>
+
   </main>
 
   <footer>
